--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "src/index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --watch",
     "start": "nodemon src/index.ts",
-    "start:db": "mongod"
+    "start:db": "mongod",
+    "seed": "ts-node seed.ts"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +18,7 @@
     "debug": "^4.3.4",
     "dotenv": "^16.1.3",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "fawn": "^2.1.5",
     "helmet": "^7.0.0",
     "joi": "^17.9.2",
@@ -24,7 +26,9 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.2",
     "morgan": "^1.10.0",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "winston": "^3.9.0",
+    "winston-mongodb": "^5.1.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -33,6 +37,7 @@
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/morgan": "^1.9.4",
+    "jest": "^29.5.0",
     "nodemon": "^2.0.22",
     "prettier": "^2.8.8",
     "ts-node": "^10.9.1",
