--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "",
   "main": "src/index.ts",
   "scripts": {
-    "test": "jest --watch",
     "start": "nodemon src/index.ts",
     "start:db": "mongod",
+    "test": "jest --runInBand -c jest.config.js",
+    "test:watch": "jest --watch --verbose jest.config.js",
+    "test:unit": "jest -c jest.config.unit.js",
+    "test:e2e": "jest --runInBand -c jest.config.e2e.js",
     "seed": "ts-node seed.ts"
   },
   "keywords": [],
@@ -21,6 +24,7 @@
     "express-async-errors": "^3.1.1",
     "fawn": "^2.1.5",
     "helmet": "^7.0.0",
+    "jest-watch-typeahead": "^2.2.2",
     "joi": "^17.9.2",
     "joi-objectid": "^4.0.2",
     "jsonwebtoken": "^9.0.0",
@@ -35,13 +39,18 @@
     "@types/config": "^3.3.0",
     "@types/debug": "^4.1.8",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.2",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/morgan": "^1.9.4",
+    "@types/supertest": "^2.0.12",
     "jest": "^29.5.0",
     "nodemon": "^2.0.22",
     "prettier": "^2.8.8",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
+    "tslib": "^2.5.3",
     "typescript": "^5.1.3"
   }
 }
